; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/fdt/extr_simplebus.c_simplebus_probe_nomatch.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/fdt/extr_simplebus.c_simplebus_probe_nomatch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bootverbose = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"<%s>\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c" disabled\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c" type %s\00", align 1
@.str.4 = private unnamed_addr constant [33 x i8] c" compat %s (no driver attached)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @simplebus_probe_nomatch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @simplebus_probe_nomatch(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* @bootverbose, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %48

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = call i8* @ofw_bus_get_compat(i32 %12)
  store i8* %13, i8** %7, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  br label %48

17:                                               ; preds = %11
  %18 = load i32, i32* %4, align 4
  %19 = call i8* @ofw_bus_get_name(i32 %18)
  store i8* %19, i8** %5, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i8* @ofw_bus_get_type(i32 %20)
  store i8* %21, i8** %6, align 8
  %22 = load i32, i32* %3, align 4
  %23 = load i8*, i8** %5, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %27

25:                                               ; preds = %17
  %26 = load i8*, i8** %5, align 8
  br label %28

27:                                               ; preds = %17
  br label %28

28:                                               ; preds = %27, %25
  %29 = phi i8* [ %26, %25 ], [ getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), %27 ]
  %30 = call i32 @device_printf(i32 %22, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %29)
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @device_get_ivars(i32 %31)
  %33 = call i32 @simplebus_print_res(i32 %32)
  %34 = load i32, i32* %4, align 4
  %35 = call i32 @ofw_bus_status_okay(i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %39, label %37

37:                                               ; preds = %28
  %38 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  br label %39

39:                                               ; preds = %37, %28
  %40 = load i8*, i8** %6, align 8
  %41 = icmp ne i8* %40, null
  br i1 %41, label %42, label %45

42:                                               ; preds = %39
  %43 = load i8*, i8** %6, align 8
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i8* %43)
  br label %45

45:                                               ; preds = %42, %39
  %46 = load i8*, i8** %7, align 8
  %47 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.4, i64 0, i64 0), i8* %46)
  br label %48

48:                                               ; preds = %45, %16, %10
  ret void
}

declare dso_local i8* @ofw_bus_get_compat(i32) #1

declare dso_local i8* @ofw_bus_get_name(i32) #1

declare dso_local i8* @ofw_bus_get_type(i32) #1

declare dso_local i32 @device_printf(i32, i8*, i8*) #1

declare dso_local i32 @simplebus_print_res(i32) #1

declare dso_local i32 @device_get_ivars(i32) #1

declare dso_local i32 @ofw_bus_status_okay(i32) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
